2020-12-10 <pepa65@passchier.net>
- Using bash instead of sh for more versatility
- Supplying mapf command that will stop execution on a non-zero returncode
- Allowing default variable m